new proj/src/objects/GE_HQ_Contact_Product_Interest__c.object
<CustomObject>
    <description>This is a child object of contact to display all the products that a customer is interested in.</description>
    <fields>
        <fullName>GE_ES_MCS_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <controllingField>GE_OG_Tier4__c</controllingField>
            <picklistValues>
                <fullName>EC - SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC FLAW DETECTORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC PROBES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDDY CURRENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM - CHEMICALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM - EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM - SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM DARKROOM/PB/DWSCREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIB/BOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH END VIDEOPROBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LARGE DIAMETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOW-RANGE VIDEOPROBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MID-RANGE VIDEOPROBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVI-ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVI-PRODUCT SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVI-SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - DEPOT REPAIRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - AGREEMENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - FIELD INSTALLATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - FIELD SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - RENTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - SPARE PARTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE - TRAINING SCHOOLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM - EC SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM - SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM - SMALL SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM - UT PROBES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM - UT SYSTEMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Contact_Product_Interest__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Interests</relationshipLabel>
        <relationshipName>Product_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Tier4__c</fullName>
        <label>Tier 4</label>
        <picklist>
            <controllingField>GE_OG_Tier_3__c</controllingField>
            <picklistValues>
                <fullName>After Market Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Market Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolodated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispensers - Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispensers - Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDDY CURRENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecourt Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAS &amp; MOISTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Control &amp; Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Comm Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humidity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masoneilan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meters &amp; Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mooney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Controls (DCS / BOP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRESSURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADIOGRAPHY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_3__c</fullName>
        <label>Tier 3</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Interest</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Product Interest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>